# akayu

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  mkdocs.yml  pyproject.toml  uv.lock.bak
.github/workflows/: docs.yml
docs/: api.md  benchmarks.md  getting-started.md  index.md  patterns.md
docs/css/: custom.css  mermaid.css
docs/features/: batch-processing.md  compile-optimizations.md  concurrency.md
docs/js/: mermaid-init.js
python/akayu/: __init__.py  __init__.pyi
rstreamz/: Cargo.toml  pyproject.toml
rstreamz/src/: lib.rs
rstreamz/tests/: test_args_kwargs.py  test_async.py  test_benchmark.py  test_benchmark_split.py  test_comparison.py  test_complex_benchmark.py  test_memory_leak.py  test_ops.py  test_ops_benchmark.py  test_ordering.py  test_parallel.py  test_starmap.py
scripts/: test_compat.sh  validate_mermaid.py
src/: akayu.py  combinators.rs  execution.rs  helpers.rs  lib.rs  node.rs  operations.rs  optimization.rs  rstreamz.py
tests/: test_args_kwargs.py  test_async.py  test_benchmark.py  test_benchmark_split.py  test_branch_concurrency.py  test_comparison.py  test_compile_benchmark.py  test_compile_safety.py  test_complex_benchmark.py  test_concurrency_benchmark.py  test_dynamic_topology.py  test_errors.py  test_explicit_async_opt.py  test_fuzz_dynamic.py  test_fuzz_pipelines.py  test_io.py  test_memory_comparison.py  test_memory_leak.py  test_ops.py  test_ops_benchmark.py  test_ordering.py  test_parallel.py  test_starmap.py
