[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "akayu"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "maturin>=1.10,<2.0",
    "streamz>=0.6",
    "psutil>=5.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.maturin]
python-source = "python"
module-name = "akayu.akayu"

[tool.uv]
# Track Rust source files so uv rebuilds when they change
# See: https://github.com/PyO3/maturin/issues/2314
cache-keys = [{ file = "Cargo.toml" }, { file = "src/**/*.rs" }]

[dependency-groups]
docs = [
    "mkdocs-shadcn>=0.9.8",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mdformat>=0.7",
    "mdformat-gfm>=0.3",
    "mdformat-frontmatter>=2.0",
    "mdformat-admon>=2.0",
]
